service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-ui-service
spec:
  selector:
    app: react-ui
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer

---

apiVersion: v1
kind: Service
metadata:
  name: node-api-service
spec:
  selector:
    app: node-api
  ports:
    - port: 5000
