ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: chatapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: backend.example.com
      http: 
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: node-api-service
                port:
                  number: 5000
